Fix markdown whitespace

--- a/app/assets/stylesheets/overrides.scss
+++ b/app/assets/stylesheets/overrides.scss
@@ -1,3 +1,9 @@
 .invalid-feedback {
   display: block;
 }
+
+.rendered-markdown {
+  code {
+    white-space: pre-wrap;
+  }
+}
